avance del proyecto final

--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -1,5 +1,4 @@
-<h1>listado de productos</h1>
-
+<h2>mostrando el producto {{respuesta.id2}}</h2>
 
 {{#each respuesta as |value key|}}
     <p>{{key}}: {{value}}</p>
