--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,17 @@
+<h2>Listado de productos</h2>
+<div class="container lista-productos">
 
 {{#each respuesta}}
     
     {{#each this}}
-        
-        <p>{{this}}</p>
+        <div class="container">
+            <p>{{this}}</p>
+        </div>
 
     {{/each}}
     <hr>
 {{/each}}
+</div>
+
+
+<hr>
